--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.truemind.swingbeat">
 
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +20,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.GateActivity"/>
+        <activity android:name=".ui.GateActivity"
+            android:theme="@style/AppThemeGreenBar"/>
 
     </application>
 
