Drum완료, Drum Setting 시작 - BaseActivity 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:name=".ui.IntroActivity">
@@ -22,6 +22,9 @@
 
         <activity android:name=".ui.GateActivity"
             android:theme="@style/AppThemeGreenBar"/>
+        <activity android:name=".ui.DrumActivity"
+            android:screenOrientation="landscape"/>
+
 
     </application>
 
