--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".RhythmActivity"
+        android:theme="@style/AppThemeGreenBar">
+        <activity android:name=".ui.RhythmActivity"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity android:name=".ui.IntroActivity">
             <intent-filter>
