--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.truemind.swingbeat">
 
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -12,25 +12,31 @@
         android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-        <activity android:name=".ui.IntroActivity"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".ui.IntroActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".ui.RhythmActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />    `
+                <category android:name="android.intent.category.LAUNCHER" />
+                `
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.GateActivity"
+            android:theme="@style/AppThemeGreenBar" />
+        <activity
+            android:name=".ui.DrumActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.DrumSetting"
+            android:screenOrientation="landscape" />
 
-        <activity android:name=".ui.RhythmActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".ui.GateActivity"
-            android:theme="@style/AppThemeGreenBar"/>
-        <activity android:name=".ui.DrumActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".ui.DrumSetting"
-            android:screenOrientation="landscape"/>
-
-
+        <service
+            android:name=".service.MpPlayer"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
