리듬 액티비티 레이아웃 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 `
             </intent-filter>
         </activity>
-        <activity android:name=".ui.RhythmActivity">
+        <activity android:name=".ui.RhythmActivity"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name=".ui.GateActivity"
