TestActivity군 생성 OnSingleClickListener 추가됨 Constants 수정 DrumActivity 10버튼 (Extension Mode) 추가로, Setting부분도 수정됨

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,20 @@
         <activity
             android:name=".ui.DrumSetting"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.TestIntro"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.TestActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.TestResult"
+            android:screenOrientation="landscape" />
 
         <service
             android:name=".service.MpPlayer"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true"/>
     </application>
 
 </manifest>
