RhythmActivity 수정분 현재 작업 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.RhythmActivity"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.RhythmResult"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".ui.GateActivity"
             android:theme="@style/AppThemeGreenBar" />
