--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".ui.Easter"
             android:screenOrientation="portrait" />
         <service
+            android:stopWithTask="true"
             android:name=".service.MpPlayer"
             android:enabled="true"
             android:exported="true"/>
