DrumActivity 수정(기능 추가)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
             android:screenOrientation="portrait" />
         <service
             android:name=".service.MpPlayer"
+            android:stopWithTask="true"
             android:enabled="true"
             android:exported="true"/>
     </application>
